--- a/Steckbrief/steckbrief.html
+++ b/Steckbrief/steckbrief.html
@@ -12,7 +12,7 @@ body {
 </style>
 </head>
 <body>
-	<a href="#">Link zu Aufgabe 2</a>
+	<a href="https://github.com/wirebuilder28/EIA1_SoSe22/tree/main/Steckbrief">Link zu Aufgabe 2</a>
 	<br>
 	<a href="#">Link zu Aufgabe 1</a>
 </body>
