--- a/Steckbrief/steckbrief.html
+++ b/Steckbrief/steckbrief.html
@@ -12,8 +12,8 @@ body {
 </style>
 </head>
 <body>
-	<a href="https://github.io/wirebuilder28/EIA1_SoSe22/tree/main/Steckbrief.html">Link zu Aufgabe 2</a>
+	<a href="https://github.io/wirebuilder28/EIA1_SoSe22/Steckbrief/Portfolio/index.html">Link zu Aufgabe 2</a>
 	<br>
-	<a href="#">Link zu Aufgabe 2</a>
+	<a href="">Link zu Aufgabe 2</a>
 </body>
 </html>
