--- a/Steckbrief/Portfolio/index.html
+++ b/Steckbrief/Portfolio/index.html
@@ -17,6 +17,7 @@
 <h1 style="text-align: center;">Portfolio</h1>
 <body>
   <style>
+    h1{color: yellow;}
     p{
       color: red;
     }
@@ -68,7 +69,7 @@
     <img src="../Portfolio/grafikdesign/grafik2.jpg" width="500px" height="100px" alt="" style="vertical-align: auto;margin: 10px;" >
     <img src="../Portfolio/grafikdesign/grafik3.jpg" width="500px" height="100px" alt="" style="vertical-align: auto;margin: 10px;" >
     <img src="../Portfolio/grafikdesign/grafik4.jpg" width="500px" height="100px" alt="" style="vertical-align: auto;margin: 10px;" ></p>
-<p>
+<p><h2 style="text-align:center">Videos</h2>
     <video width="320" height="240" controls>
         <source src="animation/clip1.mp4" type="video/mp4">
         <source src="animation/clip1.ogg" type="video/ogg">
@@ -90,9 +91,7 @@
       Your browser does not support the video tag.
       </video>
       
-      <p ><button class="button button1"><a href="about.html" target="_blank"><b>About me</b></a></button>
-
-      </p>
+      
 </p>
 </body>
 </html>
