--- a/Steckbrief/Portfolio/index.html
+++ b/Steckbrief/Portfolio/index.html
@@ -12,18 +12,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>P</title>
 </head>
 <h1 style="text-align: center;">Portfolio</h1>
 <body>
   <style>
-    h1{color: yellow;}
+    h1{color: rgb(0, 0, 0);}
     p{
-      color: red;
+      color: rgb(0, 0, 0);
     }
     body{
     
-      background-color: rgba(63, 4, 119, 0.8226);
+      background-color: rgb(110, 110, 110);
     }
     .footing{
       font-family: Arial, Helvetica, sans-serif;
