--- a/Steckbrief/Portfolio/index.html
+++ b/Steckbrief/Portfolio/index.html
@@ -12,7 +12,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>P</title>
+    <title>Portfolio</title>
 </head>
 <h1 style="text-align: center;">Portfolio</h1>
 <body>
@@ -60,11 +60,9 @@
   </style>
     <h2><p style="text-align: center;"><b>Alle fotos</p></b></p></h2>
 
-  <a href="foto/foto1_big.jpg"><img src="foto/foto1.jpg" width="500px" height="100px" alt="" style="vertical-align: auto;margin: 10px;" ></a>
-  <a href="foto/foto2.jpg"><img src="foto/foto2.jpg" width="500px" height="100px" alt="" style="vertical-align: auto;margin: 10px;"></a>
-  <a href="foto/foto3.jpg"><img src="foto/foto3.jpg" width="500px" height="100px" alt="" style="vertical-align: auto;margin: 10px;"></a>
-  <a href="foto/foto4.jpg"><img src="foto/foto4.jpg" width="500px" height="100px" alt="" style="vertical-align: auto;margin: 10px;"></a>
-<p><h2 style="text-align:center;">Grafiken</h2>
+  <a href="foto/daffodils.jpeg"><img src="foto/daffodils.jpeg" width="500px" height="225px" alt="" style="vertical-align: auto;margin: 10px;" ></a>
+  <a href="foto/flora.jpeg"><img src="foto/flora.jpeg" width="500px" height="225px" alt="" style="vertical-align: auto;margin: 10px;"></a>
+  <p><h2 style="text-align:center;">Grafiken</h2>
     <img src="../Portfolio/grafikdesign/grafik1.jpg" width="500px" height="100px" alt="" style="vertical-align: auto;margin: 10px;" >
     <img src="../Portfolio/grafikdesign/grafik2.jpg" width="500px" height="100px" alt="" style="vertical-align: auto;margin: 10px;" >
     <img src="../Portfolio/grafikdesign/grafik3.jpg" width="500px" height="100px" alt="" style="vertical-align: auto;margin: 10px;" >
