--- a/Steckbrief/steckbrief.html
+++ b/Steckbrief/steckbrief.html
@@ -12,8 +12,10 @@ body {
 </style>
 </head>
 <body>
-	<a href="https://wirebuilder28.github.io/EIA1_SoSe22/Steckbrief/Portfolio/index.html">Link zu Aufgabe 2</a>
+	<a href="https://wirebuilder28.github.io/EIA1_SoSe22/Steckbrief/Portfolio/index.html">Link zu Aufgabe 1</a>
 	<br>
-	<a href="https://wirebuilder28.github.io/EIA1_SoSe22/Steckbrief/Portfolio.html">Link zu Aufgabe 3</a>
+	<a href="https://wirebuilder28.github.io/EIA1_SoSe22/Steckbrief/Portfolio/portfolio.html">Link zu Aufgabe 2</a>
+	<br>
+	<a href="https">Link zu aufgabe 3</a>
 </body>
 </html>
