--- a/Steckbrief/steckbrief.html
+++ b/Steckbrief/steckbrief.html
@@ -16,6 +16,6 @@ body {
 	<br>
 	<a href="https://wirebuilder28.github.io/EIA1_SoSe22/Steckbrief/Portfolio/portfolio.html">Link zu Aufgabe 2</a>
 	<br>
-	<a href="https">Link zu aufgabe 3</a>
+	<a href="https://wirebuilder28.github.io/EIA1_SoSe22/Steckbrief/Portfolio/about.html">Link zu aufgabe 3</a>
 </body>
 </html>
