--- a/Steckbrief/Portfolio/contact.html
+++ b/Steckbrief/Portfolio/contact.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <style>
+
 body{
     background-image: linear-gradient(aqua,blue);
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
 }
   .button{
   border: none;
@@ -45,6 +46,8 @@ body{
         <p>
             
             <a href="instagram.com/alexandervincent.h">instagram</a>
+            <br>
+            <a href="mailto:avholstein@web.de">E-mail</a>
         </p>
     </header>
 </body>
