--- a/Steckbrief/steckbrief.html
+++ b/Steckbrief/steckbrief.html
@@ -14,8 +14,8 @@ body {
 <body>
 	
 	
-	<a href="https://wirebuilder28.github.io/EIA1_SoSe22/Steckbrief/Portfolio/portfolio.html">Link zu Aufgabe 2</a>
+	<a href="https://wirebuilder28.github.io/EIA1_SoSe22/Steckbrief/Portfolio/portfolio.html" target="_blank">Link zu Aufgabe 2</a>
 	<br>
-	<a href="https://wirebuilder28.github.io/EIA1_SoSe22/Steckbrief/Portfolio/about.html">Link zu aufgabe 3</a>
+	<a href="https://wirebuilder28.github.io/EIA1_SoSe22/Steckbrief/Portfolio/about.html" target="_blank">Link zu aufgabe 3</a>
 </body>
 </html>
