--- a/Steckbrief/Portfolio/about.html
+++ b/Steckbrief/Portfolio/about.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <style>
-  .button{
+  /*.button{
   border: none;
   color: white;
   padding: 16px 32px;
@@ -27,7 +27,6 @@
   margin: auto;
   transition-duration: 0.3s;
   cursor: pointer;
-  
     }
 
 .button1 {
@@ -41,7 +40,7 @@
   background-color:orange;
   color: rgb(0, 0, 0);
 }
-        body {
+        /*body {
           background-image: url(foto/cube_repeat.jpg);
           background-repeat: repeat;
         }
@@ -49,7 +48,7 @@
             text-align: center;
             margin:auto;
             padding: 3px;
-            /*background-color: rgb(233, 157, 122);*/
+            background-color: rgb(233, 157, 122)
             background-image: linear-gradient(orange,rgb(255, 230, 0));
             color: rgba(6, 92, 163, 0.88);
           }
@@ -62,7 +61,7 @@
           color:rgb(0, 0, 0);
           font-family: Arial;
           font-size: 18px;
-        }
+        } */
           </style>
           </head>
           <body>
@@ -72,10 +71,13 @@
               <br>
               <br>
               <p>
-                Name: alexander Holstein
-                aus NRW bzw bonn
-                mag gutes essen
-                <a href="contact.html" target="_blank"> <button class="button button1" >Contact</button></a>
+                
+                <h1>Steckbrief</h1><br>
+                <br><h2>Name : Alexander Holstein</h2>
+                <br><h3>Heimat: Bonn, NRW, jetzt wohnhaft in Furzwangen</h3>
+                <br><h3>Hobbies: Alkohol trinken</h3>
+                <br><h3>Studienfach: Medienkonzeption Bachelor</h3>
+                <a href="contact.html" target="_blank"> <button class="button" >Contact</button></a>
                </p>
 
             </p>
