--- a/Steckbrief/Portfolio/contact.html
+++ b/Steckbrief/Portfolio/contact.html
@@ -14,6 +14,7 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
+/*
   .button{
   border: none;
   color: white;
@@ -40,12 +41,12 @@ body{
   background-color:aqua;
   color: rgb(0, 0, 0);
 }
-        
+        */
     </style>
     <header>
         <p>
             
-            <a href="instagram.com/alexandervincent.h">instagram</a>
+            <a href="www.instagram.com">Instagram</a>
             <br>
             <a href="mailto:avholstein@web.de">E-mail</a>
         </p>
