--- a/Steckbrief/Portfolio/contact.html
+++ b/Steckbrief/Portfolio/contact.html
@@ -46,7 +46,7 @@ body{
     <header>
         <p>
             
-            <a href="www.instagram.com">Instagram</a>
+            <a href="https://www.instagram.com/">Instagram</a>
             <br>
             <a href="mailto:avholstein@web.de">E-mail</a>
         </p>
