--- a/Steckbrief/Portfolio/about.html
+++ b/Steckbrief/Portfolio/about.html
@@ -20,7 +20,7 @@
                 
                 <h1>Steckbrief</h1><br>
                 <br><h2>Name : Alexander Holstein</h2>
-                <br><h3>Heimat: Bonn, NRW, jetzt wohnhaft in Furzwangen</h3>
+                <br><h3>Heimat: Bonn, NRW, jetzt wohnhaft in Furtwangen</h3>
                 <br><h3>Hobbies: Alkohol trinken</h3>
                 <br><h3>Studienfach: Medienkonzeption Bachelor</h3>
                 <a href="contact.html" target="_blank"> <button class="button" >Contact</button></a>
