--- a/Steckbrief/Portfolio/portfolio.html
+++ b/Steckbrief/Portfolio/portfolio.html
@@ -1,14 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-    body{
-    font-family: Arial;
-    font-size: medium;
-    font-weight: lighter;
     
-  }
-      </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=chrome">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,49 +9,9 @@
 </head>
 <h1 style="text-align: center;">Portfolio</h1>
 <body>
-  <style>
-    h1{color: rgb(0, 0, 0);}
-    p{
-      color: rgb(0, 0, 0);
-    }
-    body{
-      background-color: rgb(110, 110, 110);
-    }
-    .footing{
-      font-family: Arial, Helvetica, sans-serif;
-      text-align: center;
-    }
-
-.button{
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 14px;
-  font-family: Arial;
-  margin: auto;
-  transition-duration: 0.3s;
-  cursor: pointer;
   
-    }
-
-.button1 {
-  background-color: rgb(192, 192, 192); 
-  color: rgb(0, 0, 0); 
-  border: 3px solid rgb(0, 0, 0);
-  border-radius: 10px;
-}
-
-.button1:hover {
-  background-color:aqua;
-  color: rgb(0, 0, 0);
-}
-    
-  </style>
   <p>
-    <a href="about.html" target="_blank"> <button class="button button1" >About</button></a>
+    <a href="about.html" target="_blank"> <button class="button button1" ></button></a>
   </p>
     <h2><p style="text-align: center;"><b>Fotos</p></b></p></h2>
 
