--- a/Aufgabe_4/index.html
+++ b/Aufgabe_4/index.html
@@ -6,9 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 </head>
-<h1 style="text-align: center;">Portfolio</h1>
 <body>
+  <style>
+  h1,h2,h3,h4,h5,h6{
+    color: black;
+    
+  }
 
+  </style>
+<main>
+  <h1 style="text-align: center;">Portfolio</h1>
     <h2><p style="text-align: center;"><b>Alle fotos</p></b></p></h2>
 
   <a href="foto/foto1_big.jpg"><img src="foto/foto1.jpg" width="500px" height="100px" alt="" style="vertical-align: auto;margin: 10px;" ></a>
@@ -44,5 +51,6 @@
       
       </p>
 </p>
+</main>
 </body>
 </html>
