neue aufgabe hochgeladen

--- a/Steckbrief/steckbrief.html
+++ b/Steckbrief/steckbrief.html
@@ -11,6 +11,8 @@
 	<br>
 	<br>
 	<a href="https://wirebuilder28.github.io/EIA1_SoSe22/Steckbrief/Portfolio/about.html" target="_blank">Link zu aufgabe 3</a>
+<br>
+<a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_4/portfolio.html" target="_blank">Link zu aufgabe 4</a>
 </h1>
 </body>
 </html>
