--- a/Aufgabe_4/contact.html
+++ b/Aufgabe_4/contact.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-
    
         <p>
             <h1>
