--- a/Aufgabe_4/about.html
+++ b/Aufgabe_4/about.html
@@ -10,12 +10,16 @@
 <body>
   
   <div class="header">
-          Author: Alexander Holstein<br>
-              <a href="mailto:avholstein@web.de">avholstein@web.de</a>
-              <br>
-              <br>
-          
-                </div>
+    <h1>
+      <p>
+    <a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_4/portfolio.html" target="_blank"><button class="button button1" >EIA 1</button></a>
+    
+    <a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_4/about.html"><button class="button button1">About</button></a>
+    <a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_4/contact.html"><button class="button button1">Contact</button></a>
+  </p>
+  </h1>
+    </div>
+  
 
                 <div class="main">
                 <h1>Steckbrief</h1><br>
