--- a/Aufgabe_4/portfolio.html
+++ b/Aufgabe_4/portfolio.html
@@ -13,7 +13,10 @@
   <div class="header">
   <h1>
     <p>
-  <a href="portfolio.html" target="_blank"><button class="button button1" >EIA 1</button></a>
+  <a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_4/portfolio.html" target="_blank"><button class="button button1" >EIA 1</button></a>
+  
+  <a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_4/about.html"><button class="button button1">About</button></a>
+  <a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_4/contact.html"><button class="button button1">Contact</button></a>
 </p>
 </h1>
   </div>
