added cool stuff

--- a/Aufgabe_4/contact.html
+++ b/Aufgabe_4/contact.html
@@ -9,7 +9,7 @@
 </head>
 <body>
    
-    <div class="header">
+    <header>
         <h1>
           <p>
         <a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_4/portfolio.html" target="_blank"><button class="button button1" >EIA 1</button></a>
@@ -29,7 +29,7 @@
             </h1>
         </p>
     </div>
-    <div id="footer">
+    <footer>
         
         <div class="footerbox">
             EIA 1
@@ -43,7 +43,7 @@
             <a href="mailto:avholstein@web.de">avholstein@web.de</a>
           </div>
   
-        </div>
+        </footer>
     
 </body>
 </html>
