--- a/Aufgabe_4/portfolio.html
+++ b/Aufgabe_4/portfolio.html
@@ -15,8 +15,11 @@
     <p>
   <a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_4/portfolio.html" ><button class="button button1" >EIA 1</button></a>
   
-  <a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_4/about.html"><button class="button button2">About</button></a>
+  
+  
   <a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_4/contact.html"><button class="button button2">Contact</button></a>
+  <a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_4/about.html"><button class="button button2">About</button></a>
+  <a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_4/portfolio.html" ><button class="button button2" >Portfolio</button></a>
 </p>
 </h1>
 </header>
