--- a/Aufgabe_4/portfolio.html
+++ b/Aufgabe_4/portfolio.html
@@ -26,7 +26,7 @@
 
   <div class="main">
 
-    <h2><p style="text-align: center;"><b>Fotos</p></b></p></h2>
+    <h2><p style="text-align: center;">Fotos</p></h2>
 
     <a href="foto/daffodils.jpeg"><img src="foto/daffodils.jpeg" width="45%" height="20%" alt=""></a>
     
