--- a/Aufgabe_4/portfolio.html
+++ b/Aufgabe_4/portfolio.html
@@ -60,27 +60,18 @@
         </div>
 
         <div class="footerbox">
-          EIA 1
-          <br>
-          Musterstrasse 1
-          <br>
-          Musterstadt 12345
-          <br>
-          Telefon: 0160 92420211
-          <br>
-          <a href="mailto:avholstein@web.de">avholstein@web.de</a>
+          Follow me
+        <br>
+          <a href="https://www.instagram.com/alexandervincent.h/" style="float:left;"><img src="../Aufgabe_4/foto/icon_insta.svg" alt="Instagram social" width="50px" height="50px"></a>
+          <a href="https://www.youtube.com" style="float:left;"><img src="../Aufgabe_4/foto/icon_youtube.svg" alt="Youtube social" width="50px" height="50px"></a>
+          <a href="https://www.de.linkedin.com/" style="float:left;"><img src="../Aufgabe_4/foto/icon_linkedin.svg" alt="Linkedin social" width="50px" height="50px"></a>
+          
         </div>
 
         <div class="footerbox">
-          EIA 1
+          Copyright &copy; EIA1
           <br>
-          Musterstrasse 1
-          <br>
-          Musterstadt 12345
-          <br>
-          Telefon: 0160 92420211
-          <br>
-          <a href="mailto:avholstein@web.de">avholstein@web.de</a>
+          All rights reserved
         </div>
 
       </footer>
