--- a/Aufgabe_4/portfolio.html
+++ b/Aufgabe_4/portfolio.html
@@ -28,7 +28,7 @@
 
     <h2><p style="text-align: center;">Fotos</p></h2>
 
-    <a href="foto/daffodils.jpeg"><img src="foto/daffodils.jpeg" width="45%" height="20%" alt=""></a>
+    <img src="foto/daffodils.jpeg" width="45%" height="20%" alt="">
     
   
   <p><h2 style="text-align:center;">Grafiken</h2>
