added many things

--- a/Aufgabe_5/portfolio.html
+++ b/Aufgabe_5/portfolio.html
@@ -9,14 +9,16 @@
 
 </head>
 <body>
-
+  <div class="slider">
+    Looking for an Internship
+  </div>
   <header>
   <h1>
     <p>
   <a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_4/portfolio.html" ><button class="button button1" >EIA 1</button></a>
   
   <div class="css-slides">
-    <img url="../Aufgabe_5/foto/pillars_of_creation.jpeg">
+    <img url="../Aufgabe_5/foto/pillars_of_creation.jpeg" width="100%" height="100%">
     <img url="../Aufgabe_5/foto/cube_reapeat.jpeg">
     <img url="../Aufgabe_5/foto/flora.jpeg">
   </div>
