--- a/typescript_aufgabe/test.html
+++ b/typescript_aufgabe/test.html
@@ -8,6 +8,7 @@
     <script src="hallo_welt.js" defer></script>
 </head>
 <body>
-   
+    <a href="../spanien/spanien.html">Spanien</a>
+    <a href="../deutschland/deutschland.html"></a>
 </body>
 </html>
