--- a/typescript_aufgabe/verweise/Deutschland/deutschland.html
+++ b/typescript_aufgabe/verweise/Deutschland/deutschland.html
@@ -11,13 +11,13 @@
 <body>
     <header>
         <div class="footerbox">
-    <a href="https://github.com/wirebuilder28/EIA1_SoSe22/blob/main/typescript_aufgabe/verweise/spanien/spanien.html"><img src="../../png/arrow.png" style="transform: rotate(180deg);" width="100px" height="120px"></a>
+    <a href="https://wirebuilder28.github.io/EIA1_SoSe22/typescript_aufgabe/verweise/spanien/spanien.html"><img src="../../png/arrow.png" style="transform: rotate(180deg);" width="100px" height="120px"></a>
         </div>
         
         <img src="../../png/germany.png" width=100% height=100%  >
     
     <div class="footerbox">
-        <a href="https://github.com/wirebuilder28/EIA1_SoSe22/blob/main/typescript_aufgabe/verweise/frankreich/france.html"><img src="../../png/arrow.png" width="100px" height="120px"></a>
+        <a href="https://wirebuilder28.github.io/EIA1_SoSe22/typescript_aufgabe/verweise/frankreich/france.html"><img src="../../png/arrow.png" width="100px" height="120px"></a>
             </div>
 </header>
 <div class="main">
