--- a/Steckbrief/steckbrief.html
+++ b/Steckbrief/steckbrief.html
@@ -22,5 +22,9 @@
 	<br><br>
 	<a href="https://wirebuilder28.github.io/EIA1_SoSe22/typescript_aufgabe/Deutschland/deutschland.html">Link zu aufgabe 6</a>
 </h1>
+<br>
+<br>
+	<a href="https://wirebuilder28.github.io/EIA1_SoSe22/aufgabe_7/eu.html">Link zu aufgabe 7</a>
+</h1>
 </body>
 </html>
