--- a/aufgabe_7/eu.html
+++ b/aufgabe_7/eu.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Carbon Dioxide Emissions</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="eu.js"></script>
 </head>
 
 <body>
@@ -136,27 +137,27 @@
 
         </div>
         
-        <h1>
+        <h1 id="country">
             Einwohnerzahl in der europäischen Union
         </h1>
         
-        <section>
-            <h2>65,48Mio</h2>
-            <p>Gesamtzahl Einwohnerinnen und Einwohner in Frankreich in 2022</p>
+        <section >
+            <h2 id="einwohner"></h2>
+            <p>Gesamtzahl Einwohnerinnen und Einwohner in 2022</p>
         </section>
 
-        <section>
-            <h2>14%</h2>
+        <section >
+            <h2 id="relativ">14%</h2>
             <p>Relativ zur Gesamtzahl in der EU</p>
         </section>
 
         <section>
-            <h2>5,1%</h2>
+            <h2 id="wachstum">5,1%</h2>
             <p>Wachstumsrate seit 2008</p>
         </section>
 
         <section>
-            <h2>3,34Mio</h2>
+            <h2 id="gesamt">3,34 Mio</h2>
             <p>Wachstumsrate gesamt zwischen 2008 and 2022</p>
         </section>
     </main>
