--- a/Steckbrief/steckbrief.html
+++ b/Steckbrief/steckbrief.html
@@ -25,6 +25,10 @@
 <br>
 <br>
 	<a href="https://wirebuilder28.github.io/EIA1_SoSe22/aufgabe_7/eu.html">Link zu aufgabe 7</a>
+	<br>
+
+	<a href="https://wirebuilder28.github.io/EIA1_SoSe22/aufgabe_8/drumpad.html">Link zu aufgabe 8</a>
+	<br>
 </h1>
 </body>
 </html>
