--- a/Aufgabe_9/drumpad.html
+++ b/Aufgabe_9/drumpad.html
@@ -23,7 +23,7 @@
         <div class="pad_h"></div>
         <div class="pad_i"></div>
         <div class="playbutton">
-            <audio src="../Aufgabe_8/assets/DrumPad/A.mp3"></audio>
+            <!-- <audio src="../Aufgabe_8/assets/DrumPad/A.mp3"></audio> -->
             <i class="fas fa-play"></i>
         </div>
         <div class="random"></div>
