--- a/Steckbrief/steckbrief.html
+++ b/Steckbrief/steckbrief.html
@@ -31,6 +31,8 @@
 	<br>
 	<a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_9/drumpad.html">Link zu aufgabe 9</a>
 	<br>
+	<a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_10/todo.html">Link zu aufgabe 10</a>
+	<br>
 </h1>
 </body>
 </html>
