--- a/Aufgabe_10/todo.html
+++ b/Aufgabe_10/todo.html
@@ -10,15 +10,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
 </head>
 <body>
-    <div id="newdiv" class="todolist" >
+    <div id="newdiv">
         <h2>Meine ToDo Liste</h2>
         <input type="text" placeholder="Texteingabe hier.." id="input">
-        <span onclick="newTask()" class="button">Hinzufugen</span>
+        <!--<span onclick="newTask()" class="button">Hinzufugen</span> --!-->
+        <button id="button1">Hinzufugen</button>
     </div>
 
     <ul id="mylist">
         <li>blabla</li>
-        <li>platzhalter </li>
+        <li>platzhalter</li>
         <li>Meinen T-Rex treffen</li>
     </ul>
 
