--- a/Aufgabe_9/drumpad.html
+++ b/Aufgabe_9/drumpad.html
@@ -26,7 +26,10 @@
             <!-- <audio src="../Aufgabe_8/assets/DrumPad/A.mp3"></audio> -->
             <i class="fas fa-play"></i>
         </div>
-        <div class="random"></div>
+        <div class="random">
+            <i class="fa-thin fa-shuffle"></i>
+        </div>
+        
     </div>
     
 </body>
