--- a/endabgabe/endaufgabe.html
+++ b/endabgabe/endaufgabe.html
@@ -10,9 +10,9 @@
 </head>
 <body>
 
-
+    <p id="pointCounter">Punkte: </p>
             <div id="textbox">
-            
+
                <button id="Leicht">Leicht</button>
                <button id="Mittel">Mittel</button>
                <button id="Schwer">Schwer</button>
