--- a/Aufgabe_5/portfolio.html
+++ b/Aufgabe_5/portfolio.html
@@ -15,7 +15,7 @@
   <header>
   <h1>
     <p>
-  <a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_5/portfolio.html" ><button class="button button1" >EIA 1</button></a>
+  <a href="https://alex11902.github.io/EIA1_SoSe22/Aufgabe_5/portfolio.html" ><button class="button button1" >EIA 1</button></a>
   
   <!-- <div class="background">
     <img url="../Aufgabe_5/foto/pillars_of_creation.jpeg" width="100%" height="100%">
@@ -24,9 +24,9 @@
   </div> -->
   
   
-  <a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_5/contact.html"><button class="button button2">Contact</button></a>
-  <a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_5/about.html"><button class="button button2">About</button></a>
-  <a href="https://wirebuilder28.github.io/EIA1_SoSe22/Aufgabe_5/portfolio.html" ><button class="button button2" >Portfolio</button></a>
+  <a href="https://alex11902.github.io/EIA1_SoSe22/Aufgabe_5/contact.html"><button class="button button2">Contact</button></a>
+  <a href="https://alex11902.github.io/EIA1_SoSe22/Aufgabe_5/about.html"><button class="button button2">About</button></a>
+  <a href="https://alex11902.github.io/EIA1_SoSe22/Aufgabe_5/portfolio.html" ><button class="button button2" >Portfolio</button></a>
 </p>
 </h1>
 </header>
@@ -71,7 +71,7 @@
         <br>
           <a href="https://www.instagram.com/alexandervincent.h/" style="float:left;"><img src="../Aufgabe_5/foto/icon_insta.svg" alt="Instagram social" width="50px" height="50px"></a>
           <a href="https://www.youtube.com" style="float:left;"><img src="../Aufgabe_5/foto/icon_youtube.svg" alt="Youtube social" width="50px" height="50px"></a>
-          <a href="https://www.de.linkedin.com/" style="float:left;"><img src="../Aufgabe_5/foto/icon_linkedin.svg" alt="Linkedin social" width="50px" height="50px"></a>
+          <a href="https://www.linkedin.com/in/alexander-holstein-4518b1231" style="float:left;"><img src="../Aufgabe_5/foto/icon_linkedin.svg" alt="Linkedin social" width="50px" height="50px"></a>
           
         </div>
 
