--- a/Aufgabe_5/about.html
+++ b/Aufgabe_5/about.html
@@ -52,7 +52,7 @@
                     <br>
                       <a href="https://www.instagram.com/alexandervincent.h/" style="float:left;"><img src="../Aufgabe_5/foto/icon_insta.svg" alt="Instagram social" width="50px" height="50px"></a>
                       <a href="https://www.youtube.com" style="float:left;"><img src="../Aufgabe_5/foto/icon_youtube.svg" alt="Youtube social" width="50px" height="50px"></a>
-                      <a href="https://www.de.linkedin.com/" style="float:left;"><img src="../Aufgabe_5/foto/icon_linkedin.svg" alt="Linkedin social" width="50px" height="50px"></a>
+                      <a href="https://www.linkedin.com/in/alexander-holstein-4518b1231" style="float:left;"><img src="../Aufgabe_5/foto/icon_linkedin.svg" alt="Linkedin social" width="50px" height="50px"></a>
                       
                     </div>
             
