--- a/Aufgabe_5/portfolio.html
+++ b/Aufgabe_5/portfolio.html
@@ -76,7 +76,7 @@
         </div>
 
         <div class="footerbox">
-          Copyright &copy; EIA1
+          Copyright &copy; Alexander Holstein
           <br>
           All rights reserved
         </div>
