--- a/Aufgabe_5/portfolio.html
+++ b/Aufgabe_5/portfolio.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <link rel="icon" type="image/png" href="grafikdesign/favicon.png">
+
 
 </head>
 <body>
